@@ -10,7 +10,6 @@ import java.util.List;
 
 import static java.util.Collections.emptyList;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 
 public record UserDto(
         Long id,
@@ -26,9 +25,13 @@ public record UserDto(
                 model.getName(),
                 ofNullable(model.getAccount()).map(AccountDto::new).orElse(null),
                 ofNullable(model.getCard()).map(CardDto::new).orElse(null),
-                ofNullable(model.getFeatures()).orElse(emptyList()).stream().map(FeatureDto::new).collect(toList()),
-                ofNullable(model.getNews()).orElse(emptyList()).stream().map(NewsDto::new).collect(toList())
+                ofNullable(model.getFeatures()).orElse(emptyList()).stream().map(FeatureDto::new).toList(),
+                ofNullable(model.getNews()).orElse(emptyList()).stream().map(NewsDto::new).toList()
         );
+    }
+
+    public UserDto() {
+        this(null, null, null, null, null, null);
     }
 
     public User toModel() {
@@ -37,10 +40,9 @@ public record UserDto(
         model.setName(this.name);
         model.setAccount(ofNullable(this.account).map(AccountDto::toModel).orElse(null));
         model.setCard(ofNullable(this.card).map(CardDto::toModel).orElse(null));
-        model.setFeatures(ofNullable(this.features).orElse(emptyList()).stream().map(FeatureDto::toModel).collect(toList()));
-        model.setNews(ofNullable(this.news).orElse(emptyList()).stream().map(NewsDto::toModel).collect(toList()));
+        model.setFeatures(ofNullable(this.features).orElse(emptyList()).stream().map(FeatureDto::toModel).toList());
+        model.setNews(ofNullable(this.news).orElse(emptyList()).stream().map(NewsDto::toModel).toList());
         return model;
     }
 
 }
-
